fixed white space error

--- a/style.css
+++ b/style.css
@@ -7,13 +7,12 @@ body {
 }
 
 main {
-    max-height: 100vh;
+    height: 100vh;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    padding: 5.5rem 0rem;
+    justify-content: center;
 }
 
 .text-section {
